--- a/package.json
+++ b/package.json
@@ -10,19 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@blocknote/core": "^0.13.2",
-    "@blocknote/mantine": "^0.13.2",
-    "@blocknote/react": "^0.13.2",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "draft-js": "^0.11.7",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
@@ -35,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
