--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.0.0",
+    "@types/markdown-draft-js": "^2.2.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "draft-js": "^0.11.7",
     "jose": "^5.3.0",
+    "markdown-draft-js": "^2.4.0",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
