--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@types/markdown-draft-js": "^2.2.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
