--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jose": "^5.3.0",
     "markdown-draft-js": "^2.4.0",
     "next": "14.2.3",
+    "nextjs-toploader": "^1.6.12",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
